# stocastico-gui

./: .gitignore  backtest_brevissimo_medio.py  pyproject.toml  stocastico_gui.py  test_stocastico - Copia.py  test_stocastico.py
