[tool.poetry]
name = "stocastico-gui"
version = "0.1.0"
description = "GUI per analisi stocastica con Tkinter, yfinance, FinBERT"
authors = ["Mauro Scaccia scaccia.mauro@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
pandas = "*"
matplotlib = "*"
mplfinance = "*"
yfinance = "*"
feedparser = "*"
transformers = "*"
torch = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
